--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
 
 deploy:
   provider: pages
+  repo: TeamOrangeServer/mc.akirin.xyz
   skip-cleanup: true
   github-token: $GITHUB_ACCESS_TOKEN  # セキュアとマークされたアクセストークンを travis-ci.org のダッシュボードに設定してください。https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
   target-branch: master
