--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/vuetify": "^1.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "uikit": "^3.2.3"
   }
 }
