--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/vuetify": "^1.0.0",
+    "axios": "^0.19.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "node-sass": "^4.13.0",
     "prettier": "^1.16.4",
+    "sass-loader": "^8.0.0",
     "uikit": "^3.2.3"
   }
 }
