--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "components"]
 	path = components
-	url = git@github.com:TeamOrangeServer/components.git
+	url = https://github.com/TeamOrangeServer/components.git
