--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orenge-minecraft-server",
+  "name": "orange-minecraft-server",
   "version": "1.0.0",
   "license": "SEE LICENSE IN LICENSE.md",
   "description": "mc.akirin.xyz",
