--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
-    "@nuxtjs/style-resources": "^1.0.0",
+    "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/vuetify": "^1.0.0",
     "axios": "^0.21.2",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "node-sass": "^4.13.0",
     "prettier": "^1.16.4",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.54.5",
+    "sass-loader": "^10.0.0",
     "uikit": "^3.2.3"
   }
 }
