--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
-    "nuxt": "^2.0.0",
-    "vue-scrollto": "^2.17.1"
+    "nuxt": "^2.15.8",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.8",
     "@nuxtjs/style-resources": "^1.2.1",
-    "@nuxtjs/vuetify": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.12.0",
     "axios": "^0.21.2",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
