--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "nuxt start -p 3080",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.15.8",
     "vue-scrollto": "^2.20.0"
@@ -20,13 +20,16 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/style-resources": "^1.2.1",
-    "@nuxtjs/vuetify": "^1.12.0",
-    "axios": "^0.21.2",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "axios": "^0.27.2",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "sass": "^1.54.5",
     "sass-loader": "^10.0.0",
-    "uikit": "^3.2.3"
+    "uikit": "^3.2.3",
+    "vue": "^2.7.10",
+    "webpack": "^4.36.0"
   }
 }
